--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "proyecto backend delilah resto : sistema de pedidos online para un restaurante",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./src/app.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "author": "Roman Sarmiento Gomez",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -27,6 +29,10 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.6.4"
+    "sequelize": "^6.6.4",
+    "util": "^0.12.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
